fix: order-service adapter